[package]
name = "discord_bot"
version = "0.1.0"
authors = ["GabriWar"]
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3.11"

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "collector", "standard_framework", "rustls_backend"]
version = "0.11.1"
